--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/natural": "^5.1.5",
     "@types/node-cache": "^4.1.3",
+    "@types/puppeteer": "^5.4.7",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -44,8 +45,10 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.0",
+    "puppeteer": "^24.15.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
     "stripe": "^14.0.0",
     "typeorm": "^0.3.17"
   },
